--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Js</title>
+    <title>Appointment app</title>
 </head>
 <body>
     <div class="primary">
-        <h1>JS For Beginners</h1>
+        <h1>Book your appointment</h1>
     </div>
     <div class="form">
         <form class="info">
@@ -29,6 +29,10 @@
                 <label for="email">Email</label>
                 <input type="text" id="email">
            </div>
+           <div class="number">
+            <label for="number">Phone number</label>
+            <input type="text" id="number">
+            </div>
            <button type="submit">Submit</button>
         </form>
     </div>
